# ext_dify

./: .env.example  .gitignore  README.md  app.py  app_factory.py  doc_app.py  main.py  pyproject.toml
configs/: __init__.py  app_config.py
configs/middleware/: db_config.py  redis_config.py
controllers/service_api/: __init__.py
controllers/service_api/app/: document.py
core/errors/: error.py
docs/: interview_questions.md
extensions/: __init__.py  ext_blueprints.py  ext_db.py  ext_redis.py  ext_websocket.py
libs/: external_api.py
models/: __init__.py  option.py  poll.py  vote.py
services/: options_service.py  poll_service.py
